<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_version_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_version_tv_title"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/found_the_new_version"
        android:textColor="@color/tv_color_red" />

    <TextView
        android:id="@+id/show_version_tv_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="美女程序员修复一些已知BUG." />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_version_btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_show_version_cancel"
            android:text="@string/later" />

        <Button
            android:id="@+id/show_version_btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_show_version_ok"
            android:text="@string/update_now"
            android:textColor="@color/tv_color_white" />

    </LinearLayout>

</LinearLayout>