<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- <include
        layout="@layout/activity_headview_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />-->
    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/actionbar_bg"
        android:fitsSystemWindows="true"
        android:clipToPadding="true">

        <LinearLayout
            android:background="@drawable/actionbar_item_selector"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:id="@+id/ll_actionbar_left"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_item_width_height">

            <TextView
                android:gravity="center_vertical"
                android:id="@+id/tv_actionbar_left"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/actionbar_item_width_height"
                android:paddingLeft="@dimen/default_item_padding"
                android:paddingRight="@dimen/default_item_padding"
                android:textColor="@color/action_bar_title_color"
                android:textSize="@dimen/actionbar_title_right_text_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lll_actionbar_left"
                android:layout_width="@dimen/actionbar_item_width_height"
                android:layout_height="@dimen/actionbar_item_width_height"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <!--  android:layout_margin="12dp" -->
                <ImageView
                    android:id="@+id/iv_actionbar_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_actionbar_title"
            android:padding="@dimen/margin_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLength="15"
            android:layout_centerInParent="true"
            android:singleLine="true"
            tools:text="Hotel"
            android:textColor="@color/action_bar_title_color"
            android:textSize="@dimen/actionbar_title_text_size" />



        <ImageView
            android:id="@+id/iv_actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            tools:visibility="visible"
            android:id="@+id/ll_actionbar_right"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_item_width_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/actionbar_item_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_actionbar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_item_padding"
                android:paddingRight="@dimen/default_item_padding"
                android:text="kdkk"
                android:textColor="@color/action_bar_title_color"
                android:textSize="@dimen/default_item_name"
                android:drawableRight="@drawable/down1"
                android:drawablePadding="2dp"
                android:visibility="visible" />

            <!-- android:scaleType="fitXY"-->
            <ImageView
                android:id="@+id/iv_actionbar_right"
                android:layout_width="@dimen/actionbar_item_width_height"
                android:visibility="gone"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

    <EditText
        android:id="@+id/ed_header"
        android:gravity="top"
        android:padding="@dimen/margin_5"
        android:hint="@string/share_hint_content"
        android:textColorHint="?activity_et_content_title_color_hint"
        android:textSize="@dimen/default_item_name"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/iv_header"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_15"
        android:src="@drawable/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_width="65dp"
        android:layout_height="70dp" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
       layout="@layout/view_line"/>

    <LinearLayout
        android:id="@+id/ll_location"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:src="@drawable/jl_list_location_icon"/>
        
        <TextView
            android:id="@+id/tv_location"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/share_hint_location"
            android:textSize="@dimen/default_item_sub_title"
            android:textColorHint="?activity_et_content_title_color_hint" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_15"
            android:src="@drawable/nd_more"/>

    </LinearLayout>


    <LinearLayout
        android:background="@color/gray_background"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_share"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:background="@drawable/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/bt_share"/>
    </LinearLayout>




</LinearLayout>